Starting to re struct stylesheets , trying to fix bootstrap on mobile screens

--- a/app/assets/stylesheets/application_light.scss
+++ b/app/assets/stylesheets/application_light.scss
@@ -1,134 +1,20 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "application";
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 
 $background_color: whitesmoke;
 $accent_color: darkslategrey;
 $font_color: #191919;
-
-$svgfilter: url("#svgfilter");
-
 $nav_color: #CED5E9;
 $nav_hover_colo: #e0e7fc;
 $button_color: #7e7e7e;
 
-body
-{
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-.content-container
-{
-  background-color: rgba(25, 25, 25, 0.4);
-  padding: 30px;
-  margin: 30px;
-  position: relative;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px; /* future proofing */
-  -khtml-border-radius: 5px; /* for old Konqueror browsers */
-  overflow: hidden;
-  /* remove the overflow: hidden to have tapered edges */
-}
-
-.content-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  z-index: -1;
-}
-
 body, .content-container::before {
-  background: url("https://yxpqxa.db.files.1drv.com/y4mmKOjphK22RKYSJ_wIKJ8RNL9FowOGRocX2vI9teCoya7Gwkw33yGEdEYOosR_UidGRcabb3bmNBjGbilBpnSPIBwHvC3PNmW8MSNk6FYoM-ne713jwk83hYp-IqqAzUuJZLF5qiLBCW5mJUgUhT2kBhAI40EvI4m2PpCHAcvmhJ2A9U1iDX1yI9gp1lnGJTwjWqavVdBOuaBXFR1mFdlWw?width=5120&height=2880&cropmode=none") no-repeat #000;
+  background-image: url("https://yxpqxa.db.files.1drv.com/y4mmKOjphK22RKYSJ_wIKJ8RNL9FowOGRocX2vI9teCoya7Gwkw33yGEdEYOosR_UidGRcabb3bmNBjGbilBpnSPIBwHvC3PNmW8MSNk6FYoM-ne713jwk83hYp-IqqAzUuJZLF5qiLBCW5mJUgUhT2kBhAI40EvI4m2PpCHAcvmhJ2A9U1iDX1yI9gp1lnGJTwjWqavVdBOuaBXFR1mFdlWw?width=5120&height=2880&cropmode=none");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
-
-.content-container::before {
-  content: "";
-  display: block;
-  z-index: -1;
-  -webkit-filter: $svgfilter;
-  -moz-filter: $svgfilter;
-  -o-filter: $svgfilter;
-  -ms-filter: $svgfilter;
-  filter: $svgfilter;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-h1, h2, h3, li, p {
-  color: #FFF;
-  font-family:'Oswald', 'Arial';
-}
-
-h1 {
-  font-weight: 600;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-weight: 500;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-h3 {
-  font-weight: 400;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-h4 {
-  font-weight: 300;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  font-weight: 400;
-  font-size: 24px;
-  letter-spacing: 1px;
-}
-
-p {
-  font-weight: 300;
-  font-size: 18px;
-  letter-spacing: 1px;
-}
-
-a {
-  color: #A3CDF7;
-}
-
-
-
-
-
-
-
-
-
 
